alling version numbers and a common About Dialog
git-svn-id: https://svn.code.sf.net/p/vmb/src/trunk@362 a22778cc-470f-459f-8348-c59b68ef04d0

--- a/vmb/src/mother/mother.vcproj
+++ b/vmb/src/mother/mother.vcproj
@@ -221,6 +221,10 @@
 				>
 			</File>
 			<File
+				RelativePath="..\opt\resource.h"
+				>
+			</File>
+			<File
 				RelativePath="..\opt\win32connect.h"
 				>
 			</File>
@@ -252,6 +256,10 @@
 			</File>
 			<File
 				RelativePath=".\win32.rc"
+				>
+			</File>
+			<File
+				RelativePath="..\opt\win32about.rc"
 				>
 			</File>
 			<File
