--- a/vmb/src/button/button.vcproj
+++ b/vmb/src/button/button.vcproj
@@ -233,6 +233,10 @@
 				>
 			</File>
 			<File
+				RelativePath="..\opt\win32about.rc"
+				>
+			</File>
+			<File
 				RelativePath="..\opt\win32connect.rc"
 				>
 			</File>
