--- a/vmb/src/led/led.vcproj
+++ b/vmb/src/led/led.vcproj
@@ -254,6 +254,10 @@
 				>
 			</File>
 			<File
+				RelativePath="..\opt\win32about.rc"
+				>
+			</File>
+			<File
 				RelativePath="..\opt\win32connect.rc"
 				>
 			</File>
