added a common About Box with version and revision
git-svn-id: https://svn.code.sf.net/p/vmb/src/trunk@363 a22778cc-470f-459f-8348-c59b68ef04d0

--- a/vmb/src/serial/serial.vcproj
+++ b/vmb/src/serial/serial.vcproj
@@ -249,6 +249,10 @@
 				>
 			</File>
 			<File
+				RelativePath="..\opt\win32about.rc"
+				>
+			</File>
+			<File
 				RelativePath="..\opt\win32connect.rc"
 				>
 			</File>
