--- a/vmb/src/disk/disk.vcproj
+++ b/vmb/src/disk/disk.vcproj
@@ -247,6 +247,10 @@
 				>
 			</File>
 			<File
+				RelativePath="..\opt\win32about.rc"
+				>
+			</File>
+			<File
 				RelativePath="..\opt\win32connect.rc"
 				>
 			</File>
