--- a/vmb/src/mother/mother.vcproj
+++ b/vmb/src/mother/mother.vcproj
@@ -63,9 +63,11 @@
 			<Tool
 				Name="VCLinkerTool"
 				AdditionalDependencies="Ws2_32.lib comctl32.lib"
+				ShowProgress="1"
 				LinkIncremental="2"
 				GenerateDebugInformation="true"
 				SubSystem="2"
+				LinkTimeCodeGeneration="1"
 				TargetMachine="1"
 			/>
 			<Tool
@@ -141,7 +143,7 @@
 				Name="VCLinkerTool"
 				AdditionalDependencies="Ws2_32.lib comctl32.lib"
 				LinkIncremental="1"
-				GenerateDebugInformation="true"
+				GenerateDebugInformation="false"
 				SubSystem="2"
 				OptimizeReferences="2"
 				EnableCOMDATFolding="2"
@@ -217,11 +219,11 @@
 				>
 			</File>
 			<File
-				RelativePath=".\resource.h"
+				RelativePath="..\opt\resource.h"
 				>
 			</File>
 			<File
-				RelativePath="..\opt\resource.h"
+				RelativePath=".\resource.h"
 				>
 			</File>
 			<File
