--- a/vmb/src/rom/rom.vcproj
+++ b/vmb/src/rom/rom.vcproj
@@ -241,6 +241,10 @@
 				>
 			</File>
 			<File
+				RelativePath="..\opt\win32about.rc"
+				>
+			</File>
+			<File
 				RelativePath="..\opt\win32connect.rc"
 				>
 			</File>
