--- a/vmb/src/screen/screen.vcproj
+++ b/vmb/src/screen/screen.vcproj
@@ -245,6 +245,10 @@
 				>
 			</File>
 			<File
+				RelativePath="..\opt\win32about.rc"
+				>
+			</File>
+			<File
 				RelativePath="..\opt\win32connect.rc"
 				>
 			</File>
