--- a/vmb/src/sevensegment/sevensegment.vcproj
+++ b/vmb/src/sevensegment/sevensegment.vcproj
@@ -221,6 +221,10 @@
 				>
 			</File>
 			<File
+				RelativePath="..\opt\win32about.rc"
+				>
+			</File>
+			<File
 				RelativePath="..\opt\win32connect.rc"
 				>
 			</File>
