--- a/vmb/src/timer/timer.vcproj
+++ b/vmb/src/timer/timer.vcproj
@@ -249,6 +249,10 @@
 				>
 			</File>
 			<File
+				RelativePath="..\opt\win32about.rc"
+				>
+			</File>
+			<File
 				RelativePath="..\opt\win32connect.rc"
 				>
 			</File>
