--- a/vmb/src/winvram/win32.rc
+++ b/vmb/src/winvram/win32.rc
@@ -28,29 +28,29 @@ LANGUAGE LANG_GERMAN, SUBLANG_GERMAN
 
 IDR_MENU MENUEX 
 BEGIN
-    POPUP "All",                            
-        BEGIN
-        MENUITEM "&Exit",                       ID_EXIT
+    POPUP "All",                            0,MFT_STRING,MFS_ENABLED
+    BEGIN
+        MENUITEM "&Exit",                       ID_EXIT,MFT_STRING,MFS_ENABLED
         MENUITEM MFT_SEPARATOR
-        MENUITEM "&Connect...",                 ID_CONNECT
-        MENUITEM "&Settings...",                ID_SETTINGS
+        MENUITEM "&Connect...",                 ID_CONNECT,MFT_STRING,MFS_ENABLED
+        MENUITEM "&Settings...",                ID_SETTINGS,MFT_STRING,MFS_ENABLED
         MENUITEM MFT_SEPARATOR
-        MENUITEM "&Debug",                      ID_DEBUG
-        MENUITEM "&Verbose",                    ID_VERBOSE
-        POPUP "&Help",                          
+        MENUITEM "&Debug",                      ID_DEBUG,MFT_STRING,MFS_ENABLED
+        MENUITEM "&Verbose",                    ID_VERBOSE,MFT_STRING,MFS_ENABLED
+        POPUP "&Help",                          0,MFT_STRING,MFS_ENABLED
         BEGIN
-            MENUITEM "&About",                      ID_HELP_ABOUT
-            MENUITEM "&Help",                       ID_HELP
-            MENUITEM "&Configuration",              ID_HELP_CONFIGURATION
+            MENUITEM "&About",                      ID_HELP_ABOUT,MFT_STRING,MFS_ENABLED
+            MENUITEM "&Help",                       ID_HELP,MFT_STRING,MFS_ENABLED
+            MENUITEM "&Configuration",              ID_HELP_CONFIGURATION,MFT_STRING,MFS_ENABLED
         END
-        MENUITEM "&Minimize",                   ID_MINIMIZE
-        POPUP "&Zoom",                          
+        MENUITEM "&Minimize",                   ID_MINIMIZE,MFT_STRING,MFS_ENABLED
+        POPUP "&Zoom",                          0,MFT_STRING,MFS_ENABLED
         BEGIN
-            MENUITEM "&50%",                        ID_ZOOM_50
-            MENUITEM "&100%",                       ID_ZOOM_100
-            MENUITEM "&200%",                       ID_ZOOM_200
-            MENUITEM "&400%",                       ID_ZOOM_400
-            MENUITEM "&800%",                       ID_ZOOM_800
+            MENUITEM "&50%",                        ID_ZOOM_50,MFT_STRING,MFS_ENABLED
+            MENUITEM "&100%",                       ID_ZOOM_100,MFT_STRING,MFS_ENABLED
+            MENUITEM "&200%",                       ID_ZOOM_200,MFT_STRING,MFS_ENABLED
+            MENUITEM "&400%",                       ID_ZOOM_400,MFT_STRING,MFS_ENABLED
+            MENUITEM "&800%",                       ID_ZOOM_800,MFT_STRING,MFS_ENABLED
         END
     END
 END
@@ -81,16 +81,6 @@ IDI_ICON                ICON                    "icon.ico"
 //
 // Dialog
 //
-
-IDD_ABOUT DIALOGEX 0, 0, 186, 95
-STYLE DS_SETFONT | DS_MODALFRAME | WS_POPUP | WS_CAPTION | WS_SYSMENU
-CAPTION "About"
-FONT 8, "MS Sans Serif", 0, 0, 0x0
-BEGIN
-    DEFPUSHBUTTON   "OK",IDOK,129,74,50,14
-    CTEXT           "VMB Videoram, Mouse, and GPU",IDC_STATIC,19,14,147,12,SS_CENTERIMAGE
-    CTEXT           "Copyright: Martin Ruckert, 2005",IDC_STATIC,23,59,147,12,SS_CENTERIMAGE
-END
 
 IDD_SETTINGS DIALOGEX 0, 0, 249, 265
 STYLE DS_SETFONT | DS_MODALFRAME | WS_POPUP | WS_CAPTION | WS_SYSMENU
@@ -132,14 +122,6 @@ END
 #ifdef APSTUDIO_INVOKED
 GUIDELINES DESIGNINFO 
 BEGIN
-    IDD_ABOUT, DIALOG
-    BEGIN
-        LEFTMARGIN, 7
-        RIGHTMARGIN, 179
-        TOPMARGIN, 7
-        BOTTOMMARGIN, 88
-    END
-
     IDD_SETTINGS, DIALOG
     BEGIN
         LEFTMARGIN, 7
