--- a/vmb/src/mother/win32.rc
+++ b/vmb/src/mother/win32.rc
@@ -88,6 +88,7 @@ STYLE DS_SETFONT | DS_MODALFRAME | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "Info"
 FONT 8, "MS Sans Serif", 0, 0, 0x1
 BEGIN
+    CONTROL         "Tab1",IDC_SLOTS,"SysTabControl32",0x0,7,7,223,121
     DEFPUSHBUTTON   "OK",IDOK,180,134,50,14
     LTEXT           "Slot:",IDC_STATIC,23,28,15,8
     LTEXT           "Slotname",IDC_SLOTNAME,96,28,117,8
@@ -101,7 +102,6 @@ BEGIN
     LTEXT           "Slotinterrupts",IDC_SLOTMASK,96,76,117,8
     PUSHBUTTON      "Reset",IDC_SLOTRESET,21,90,50,14
     PUSHBUTTON      "Disconnect",IDC_SLOTCLOSE,21,108,50,14
-    CONTROL         "Tab1",IDC_SLOTS,"SysTabControl32",0x0,7,7,223,121,WS_EX_TRANSPARENT
 END
 
 IDD_ONOFF DIALOGEX 0, 0, 15, 15
