Adding a data editor to the timer device. First working version.
git-svn-id: https://svn.code.sf.net/p/vmb/src/trunk@374 a22778cc-470f-459f-8348-c59b68ef04d0

--- a/vmb/src/mmix/abstime.vcproj
+++ b/vmb/src/mmix/abstime.vcproj
@@ -90,7 +90,7 @@
 			<Tool
 				Name="VCPostBuildEventTool"
 				Description="Generate abstime.h"
-				CommandLine="abstime.exe &gt; abstime.h"
+				CommandLine="Debug\abstime.exe &gt; abstime.h"
 			/>
 		</Configuration>
 		<Configuration
@@ -169,7 +169,7 @@
 			<Tool
 				Name="VCPostBuildEventTool"
 				Description="Generate abstime.h"
-				CommandLine="abstime.exe &gt; abstime.h"
+				CommandLine="Release\abstime.exe &gt; abstime.h"
 			/>
 		</Configuration>
 	</Configurations>
