--- a/vmb/src/opt/vmbwinopt.vcproj
+++ b/vmb/src/opt/vmbwinopt.vcproj
@@ -154,6 +154,10 @@
 			UniqueIdentifier="{4FC737F1-C7A5-4376-A066-2A32D752A2FF}"
 			>
 			<File
+				RelativePath=".\float.c"
+				>
+			</File>
+			<File
 				RelativePath=".\option.c"
 				>
 			</File>
@@ -216,6 +220,14 @@
 			UniqueIdentifier="{93995380-89BD-4b04-88EB-625FBE52EBFB}"
 			>
 			<File
+				RelativePath=".\float.h"
+				>
+			</File>
+			<File
+				RelativePath=".\inspect.h"
+				>
+			</File>
+			<File
 				RelativePath=".\option.h"
 				>
 			</File>
@@ -225,10 +237,6 @@
 			</File>
 			<File
 				RelativePath=".\resource.h"
-				>
-			</File>
-			<File
-				RelativePath=".\winmem.h"
 				>
 			</File>
 			<File
