adding a data editor window to the debugger
git-svn-id: https://svn.code.sf.net/p/vmb/src/trunk@377 a22778cc-470f-459f-8348-c59b68ef04d0

--- a/vmb/src/mmix/abstime.vcproj
+++ b/vmb/src/mmix/abstime.vcproj
@@ -169,7 +169,7 @@
 			<Tool
 				Name="VCPostBuildEventTool"
 				Description="Generate abstime.h"
-				CommandLine="Release\abstime.exe &gt; abstime.h"
+				CommandLine="$(OutDir)\abstime.exe &gt; abstime.h"
 			/>
 		</Configuration>
 	</Configurations>
