--- a/vmb/src/disk/disk.vcproj
+++ b/vmb/src/disk/disk.vcproj
@@ -254,6 +254,10 @@
 				RelativePath="..\opt\win32connect.rc"
 				>
 			</File>
+			<File
+				RelativePath="..\opt\win32dedit.rc"
+				>
+			</File>
 		</Filter>
 	</Files>
 	<Globals>
