--- a/vmb/src/keyboard/keyboard.vcproj
+++ b/vmb/src/keyboard/keyboard.vcproj
@@ -252,6 +252,10 @@
 				RelativePath="..\opt\win32connect.rc"
 				>
 			</File>
+			<File
+				RelativePath="..\opt\win32dedit.rc"
+				>
+			</File>
 		</Filter>
 	</Files>
 	<Globals>
