--- a/vmb/src/led/led.vcproj
+++ b/vmb/src/led/led.vcproj
@@ -261,6 +261,10 @@
 				RelativePath="..\opt\win32connect.rc"
 				>
 			</File>
+			<File
+				RelativePath="..\opt\win32dedit.rc"
+				>
+			</File>
 		</Filter>
 	</Files>
 	<Globals>
