--- a/vmb/src/sevensegment/sevensegment.vcproj
+++ b/vmb/src/sevensegment/sevensegment.vcproj
@@ -228,6 +228,10 @@
 				RelativePath="..\opt\win32connect.rc"
 				>
 			</File>
+			<File
+				RelativePath="..\opt\win32dedit.rc"
+				>
+			</File>
 		</Filter>
 	</Files>
 	<Globals>
