--- a/vmb/src/opt/win32connect.rc
+++ b/vmb/src/opt/win32connect.rc
@@ -65,16 +65,16 @@ BEGIN
     CONTROL         "Hide Fatal Errors",IDC_HIDE_FATAL,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,107,75,68,10
 END
 
-IDD_MEMORY DIALOGEX 0, 0, 190, 133
-STYLE DS_SETFONT | DS_FIXEDSYS | WS_CHILD
+IDD_MEMORY DIALOGEX 0, 0, 204, 133
+STYLE DS_SETFONT | DS_FIXEDSYS | WS_CHILD | WS_BORDER
 EXSTYLE WS_EX_APPWINDOW
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
-    SCROLLBAR       IDC_MEM_SCROLLBAR,176,18,12,109,SBS_VERT
+    SCROLLBAR       IDC_MEM_SCROLLBAR,185,18,12,109,SBS_VERT
     EDITTEXT        IDC_GOTO,24,2,85,12,ES_AUTOHSCROLL | NOT WS_BORDER | WS_GROUP,WS_EX_CLIENTEDGE
     LTEXT           "Go to:",IDC_GOTO_PROMPT,2,2,21,8
-    PUSHBUTTON      "Format",IDC_FORMAT,116,0,30,13
-    PUSHBUTTON      "Size",IDC_CHUNK,149,0,30,13
+    PUSHBUTTON      "Format",IDC_FORMAT,116,0,39,14
+    PUSHBUTTON      "Size",IDC_CHUNK,158,0,39,14
 END
 
 IDD_CONFIGURATION DIALOGEX 0, 0, 331, 335
@@ -110,8 +110,8 @@ BEGIN
 
     IDD_MEMORY, DIALOG
     BEGIN
-        RIGHTMARGIN, 188
-        BOTTOMMARGIN, 132
+        RIGHTMARGIN, 197
+        BOTTOMMARGIN, 127
     END
 END
 #endif    // APSTUDIO_INVOKED
