--- a/vmb/src/mmixide/mmixide.vcproj
+++ b/vmb/src/mmixide/mmixide.vcproj
@@ -185,6 +185,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\mmixdata.c"
+				>
+			</File>
+			<File
 				RelativePath=".\mmixrun.c"
 				>
 			</File>
