Find and Replace added to MMIXIDE
git-svn-id: https://svn.code.sf.net/p/vmb/src/trunk@388 a22778cc-470f-459f-8348-c59b68ef04d0

--- a/vmb/src/mmixide/mmixide.vcproj
+++ b/vmb/src/mmixide/mmixide.vcproj
@@ -185,6 +185,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\findreplace.c"
+				>
+			</File>
+			<File
 				RelativePath=".\mmixdata.c"
 				>
 			</File>
@@ -216,6 +220,10 @@
 			>
 			<File
 				RelativePath=".\debug.h"
+				>
+			</File>
+			<File
+				RelativePath=".\findreplace.h"
 				>
 			</File>
 			<File
