added some code to break at Main
git-svn-id: https://svn.code.sf.net/p/vmb/src/trunk@393 a22778cc-470f-459f-8348-c59b68ef04d0

--- a/vmb/src/mmixide/mmixide.rc
+++ b/vmb/src/mmixide/mmixide.rc
@@ -120,7 +120,7 @@ BEGIN
     POPUP "&Options",                       65535,MFT_STRING,MFS_ENABLED
     BEGIN
         MENUITEM "&Special Registers ...",      ID_OPTIONS_SPECIALS,MFT_STRING,MFS_ENABLED
-        MENUITEM "&Debug Windows ...",          ID_OPTIONS_WINDOWS,MFT_STRING,MFS_ENABLED
+        MENUITEM "&Debug  ...",                 ID_OPTIONS_WINDOWS,MFT_STRING,MFS_ENABLED
     END
     POPUP "&Help",                          65535,MFT_STRING | MFT_RIGHTJUSTIFY,MFS_ENABLED
     BEGIN
@@ -172,22 +172,25 @@ IDI_VIEW_ZOOMIN         ICON                    "Icons\\zoom-in-3.ico"
 // Dialog
 //
 
-IDD_SHOW_DEBUG DIALOGEX 0, 0, 184, 127
+IDD_SHOW_DEBUG DIALOGEX 0, 0, 184, 166
 STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSMENU
-CAPTION "Debug Windows"
+CAPTION "Debug Options"
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
     DEFPUSHBUTTON   "OK",IDOK,127,7,50,14
     PUSHBUTTON      "Cancel",IDCANCEL,127,24,50,14
-    CONTROL         "Local Registers",IDC_SHOW_LOCAL,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,7,64,10
-    CONTROL         "Global Registers",IDC_SHOW_GLOBAL,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,18,67,10
-    CONTROL         "Special Registers",IDC_SHOW_SPECIAL,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,29,70,10
-    CONTROL         "Register Stack",IDC_SHOW_REGSTACK,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,40,62,10
-    CONTROL         "Text Segment",IDC_SHOW_TEXT,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,62,61,10
-    CONTROL         "Data Segment",IDC_SHOW_DATA,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,74,61,10
-    CONTROL         "Pool Segment",IDC_SHOW_POOL,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,86,59,10
-    CONTROL         "Negative Segment",IDC_SHOW_NEG,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,110,75,10
-    CONTROL         "Stack Segment",IDC_SHOW_STACK,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,98,63,10
+    CONTROL         "Local Registers",IDC_SHOW_LOCAL,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,15,17,64,10
+    CONTROL         "Global Registers",IDC_SHOW_GLOBAL,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,15,28,67,10
+    CONTROL         "Special Registers",IDC_SHOW_SPECIAL,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,15,39,70,10
+    CONTROL         "Register Stack",IDC_SHOW_REGSTACK,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,15,50,62,10
+    CONTROL         "Text Segment",IDC_SHOW_TEXT,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,15,81,61,10
+    CONTROL         "Data Segment",IDC_SHOW_DATA,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,15,93,61,10
+    CONTROL         "Pool Segment",IDC_SHOW_POOL,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,15,105,59,10
+    CONTROL         "Negative Segment",IDC_SHOW_NEG,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,15,129,75,10
+    CONTROL         "Stack Segment",IDC_SHOW_STACK,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,15,117,63,10
+    GROUPBOX        "Show Registers",IDC_STATIC,9,7,106,57
+    GROUPBOX        "Show Memory",IDC_STATIC,9,71,102,72
+    CONTROL         "Break at Main",IDC_CHECK_MAIN,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,15,148,59,10
 END
 
 IDD_FIND DIALOGEX 0, 0, 317, 79
