--- a/vmb/src/mmixide/mmixide.vcproj
+++ b/vmb/src/mmixide/mmixide.vcproj
@@ -181,11 +181,27 @@
 			UniqueIdentifier="{4FC737F1-C7A5-4376-A066-2A32D752A2FF}"
 			>
 			<File
+				RelativePath=".\assembler.c"
+				>
+			</File>
+			<File
 				RelativePath=".\debug.c"
 				>
 			</File>
 			<File
+				RelativePath=".\edit.c"
+				>
+			</File>
+			<File
+				RelativePath=".\filelist.c"
+				>
+			</File>
+			<File
 				RelativePath=".\findreplace.c"
+				>
+			</File>
+			<File
+				RelativePath=".\info.c"
 				>
 			</File>
 			<File
@@ -213,6 +229,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\symtab.c"
+				>
+			</File>
+			<File
 				RelativePath=".\winmain.c"
 				>
 			</File>
@@ -223,11 +243,31 @@
 			UniqueIdentifier="{93995380-89BD-4b04-88EB-625FBE52EBFB}"
 			>
 			<File
+				RelativePath=".\assembler.h"
+				>
+			</File>
+			<File
 				RelativePath=".\debug.h"
 				>
 			</File>
 			<File
+				RelativePath=".\edit.h"
+				>
+			</File>
+			<File
+				RelativePath=".\filelist.h"
+				>
+			</File>
+			<File
 				RelativePath=".\findreplace.h"
+				>
+			</File>
+			<File
+				RelativePath=".\info.h"
+				>
+			</File>
+			<File
+				RelativePath=".\mmixdata.h"
 				>
 			</File>
 			<File
@@ -243,7 +283,15 @@
 				>
 			</File>
 			<File
+				RelativePath="..\opt\resource.h"
+				>
+			</File>
+			<File
 				RelativePath=".\resource.h"
+				>
+			</File>
+			<File
+				RelativePath=".\symtab.h"
 				>
 			</File>
 			<File
@@ -256,6 +304,10 @@
 			Filter="rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav"
 			UniqueIdentifier="{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}"
 			>
+			<File
+				RelativePath=".\Icons\continue.ico"
+				>
+			</File>
 			<File
 				RelativePath=".\Icons\document-new-7.ico"
 				>
@@ -277,6 +329,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\Icons\edit-find-replace-4.ico"
+				>
+			</File>
+			<File
 				RelativePath=".\Icons\edit-paste-6.ico"
 				>
 			</File>
@@ -289,11 +345,27 @@
 				>
 			</File>
 			<File
+				RelativePath=".\Icons\ff.ico"
+				>
+			</File>
+			<File
+				RelativePath=".\Icons\halt.ico"
+				>
+			</File>
+			<File
 				RelativePath=".\Icons\help-3.ico"
 				>
 			</File>
 			<File
+				RelativePath=".\icon.ico"
+				>
+			</File>
+			<File
 				RelativePath=".\Image\icon1.ico"
+				>
+			</File>
+			<File
+				RelativePath=".\Icons\icon2.ico"
 				>
 			</File>
 			<File
@@ -305,7 +377,23 @@
 				>
 			</File>
 			<File
+				RelativePath=".\Icons\pause.ico"
+				>
+			</File>
+			<File
+				RelativePath=".\Icons\play.ico"
+				>
+			</File>
+			<File
 				RelativePath="..\scintilla\win32\ScintRes.rc"
+				>
+			</File>
+			<File
+				RelativePath=".\Icons\step.ico"
+				>
+			</File>
+			<File
+				RelativePath=".\Icons\stop.ico"
 				>
 			</File>
 			<File
