--- a/vmb/src/opt/win32about.rc
+++ b/vmb/src/opt/win32about.rc
@@ -27,7 +27,7 @@ LANGUAGE LANG_GERMAN, SUBLANG_GERMAN
 //
 
 IDD_ABOUT DIALOGEX 0, 0, 166, 97
-STYLE DS_SETFONT | DS_MODALFRAME | WS_POPUP | WS_CAPTION | WS_SYSMENU
+STYLE DS_SETFONT | DS_MODALFRAME | DS_CENTER | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "About"
 FONT 8, "MS Sans Serif", 0, 0, 0x0
 BEGIN
