--- a/vmb/src/opt/win32connect.rc
+++ b/vmb/src/opt/win32connect.rc
@@ -28,7 +28,7 @@ LANGUAGE LANG_GERMAN, SUBLANG_GERMAN
 
 IDD_CONNECT DIALOGEX 0, 0, 186, 85
 STYLE DS_SETFONT | DS_MODALFRAME | WS_POPUP | WS_CAPTION | WS_SYSMENU
-CAPTION "Connect Global"
+CAPTION "Connect to VMB"
 FONT 8, "MS Sans Serif", 0, 0, 0x1
 BEGIN
     DEFPUSHBUTTON   "OK",IDOK,129,46,50,14
@@ -37,6 +37,7 @@ BEGIN
     LTEXT           "Host:",IDC_STATIC,7,7,18,8
     EDITTEXT        IDC_THE_PORT,32,24,40,12,ES_AUTOHSCROLL
     LTEXT           "Port:",IDC_STATIC,7,26,16,8
+    CONTROL         "Autoconnect",IDC_CHECK_AUTOCONNECT,"Button",BS_AUTOCHECKBOX | BS_LEFTTEXT | WS_TABSTOP,7,42,57,10
 END
 
 IDD_DEBUG DIALOGEX 220, 0, 219, 126
