added list for extera sources and debuging in multiple files
git-svn-id: https://svn.code.sf.net/p/vmb/src/trunk@399 a22778cc-470f-459f-8348-c59b68ef04d0

--- a/vmb/src/mmixide/mmixide.vcproj
+++ b/vmb/src/mmixide/mmixide.vcproj
@@ -229,6 +229,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\sources.c"
+				>
+			</File>
+			<File
 				RelativePath=".\symtab.c"
 				>
 			</File>
@@ -283,11 +287,15 @@
 				>
 			</File>
 			<File
+				RelativePath=".\resource.h"
+				>
+			</File>
+			<File
 				RelativePath="..\opt\resource.h"
 				>
 			</File>
 			<File
-				RelativePath=".\resource.h"
+				RelativePath=".\sources.h"
 				>
 			</File>
 			<File
